# crusty-rustacean-com-v3

./: .gitattributes  .gitignore  Cargo.toml  README.md  Shuttle.toml
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  errors.rs  lib.rs
app/src/routes/: mod.rs  ping.rs  static_server.rs  storage_health.rs
configuration/: base.yml  dev.yml  prod.yml
scripts/: init_db.sh
server/: Cargo.toml
server/tests/integration/: helpers.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
shuttle/: Cargo.toml
shuttle/migrations/: 20250101000000_initial_schema.down.sql  20250101000000_initial_schema.up.sql  20250102000000_add_fulltext_search_index.down.sql  20250102000000_add_fulltext_search_index.up.sql  20250103000000_make_blogpost_id_nullable.down.sql  20250103000000_make_blogpost_id_nullable.up.sql
shuttle/src/: main.rs  startup.rs
templates/: base.html
